tests/sources/invalid/syntax/declaration_dispatch_errors.fire
// Malformed declaration-level syntax: generics, imports.
// Targets recovery paths in firescript/parser/declarations.py not covered
// by generic_declaration_errors.fire / generic_call_errors.fire /
// import_syntax_errors.fire.
//
// The old top-level dispatcher's 30-token can_be_func lookahead (and its
// generator-declaration equivalent) is gone now that every callable is
// unambiguously introduced by 'fn' -- dispatch is trivial, so the
// dispatcher-specific bugs this file used to target for generic functions
// and generators no longer exist as distinct recovery paths. The remaining
// cases below still exercise real limitations in
// _parse_generic_type_param_list itself; the generator-shaped cases were
// dropped as redundant with generator_def_errors.fire /
// function_def_syntax_errors.fire.

// Missing '>' to close type parameters: _parse_generic_type_param_list's
// constraint parsing doesn't understand nested generic constraint types
// and bails out at the inner '<' instead of consuming through to the real
// closing '>'.
copyable class Box<T> {
    v: T;
    fn Box(v: T) {
        this.v = v;
    }
}
fn identity2<T: Box<int32>>(x: T) -> T {  //~ ERROR FS-PARSE-0010 @20
//~^ ERROR FS-PARSE-0010 @33
//~^^ ERROR FS-PARSE-0010 @38
    return x;  //~ ERROR FS-PARSE-0003 @12
}

// Empty generic type-parameter list on a function.
fn identity_empty<>(x: T) -> T {  //~ ERROR FS-PARSE-0010 @19
//~^ ERROR FS-PARSE-0010 @25
//~^^ ERROR FS-PARSE-0010 @30
    return x;  //~ ERROR FS-PARSE-0003 @12
}

// Missing constraint type/interface after ':'.
fn bad_constraint<T: >(x: T) -> T {  //~ ERROR FS-PARSE-0010 @22
//~^ ERROR FS-PARSE-0010 @28
//~^^ ERROR FS-PARSE-0010 @33
    return x;  //~ ERROR FS-PARSE-0003 @12
}

// Missing identifier after '@' in external import form.
import @;  //~ ERROR FS-PARSE-0010 @9

// Missing identifier after '/' in external package path.
import @somebody/;  //~ ERROR FS-PARSE-0010 @18
//~^ ERROR FS-PARSE-0012 @1

// 'export' with nothing following at EOF-adjacent position handled below
// (kept last since it consumes remaining tokens on error paths).
